// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "/protofolder";
// option java_multiple_files = true;
// option java_package = "io.grpc.examples.helloworld";
// option java_outer_classname = "HelloWorldProto";

package parkir;
import "google/protobuf/empty.proto";

// // The greeting service definition.
// service Greeter {
//   // Sends a greeting
//   rpc SayHello (HelloRequest) returns (HelloReply) {}
//   rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
// }

service Connect {
  rpc ConnectToServer (google.protobuf.Empty) returns (ServerReply) {}
  rpc GetParkID (google.protobuf.Empty) returns (Parkid) {}
  rpc GetParkFee (Parker) returns (Nota) {}
}

message ServerReply {
  string message = 1;
}

message Parker {
  string parkid = 1;
  string kendaraan = 2;
  string platno = 3;
}

message Parkid {
  string parkid = 1;
}

message Nota {
  string masuk = 1;
  string keluar = 2;
  string kendaraan = 3;
  string platno = 4;
  int32 biaya = 5;
}


// // The request message containing the user's name.
// message HelloRequest {
//   string name = 1;
// }

// // The response message containing the greetings
// message HelloReply {
//   string message = 1;
// }
